--- a/ghost/i18n/locales/hr/portal.json
+++ b/ghost/i18n/locales/hr/portal.json
@@ -2,16 +2,16 @@
     "(save {highestYearlyDiscount}%)": "(uštedi {highestYearlyDiscount}%)",
     "{amount} days free": "{amount} dana besplatno",
     "{amount} off": "Snižena cijena {amount}",
-    "{amount} off for first {number} months.": "Snižena cijena {amount} za prvih {number} mjeseci",
-    "{amount} off for first {period}.": "Snižena cijena {amount} za prvih {period}",
-    "{amount} off forever.": "Snižena cijena zauvijek",
+    "{amount} off for first {number} months.": "Snižena cijena {amount} za prvih {number} mjeseci.",
+    "{amount} off for first {period}.": "Snižena cijena {amount} za prvih {period}.",
+    "{amount} off forever.": "Snižena cijena {amount} zauvijek.",
     "{discount}% discount": "{discount}% popusta",
     "{memberEmail} will no longer receive {newsletterName} newsletter.": "{memberEmail} više neće primati {newsletterName} newsletter.",
     "{memberEmail} will no longer receive emails when someone replies to your comments.": "{memberEmail} više neće primati e-poštu kada netko odgovori na vaš komentar.",
     "{memberEmail} will no longer receive this newsletter.": "{memberEmail} više neće primati ovaj newsletter.",
     "{trialDays} days free": "{trialDays} dana besplatno",
     "+1 (123) 456-7890": " (+385 1) 234-5678",
-    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Link za prijavu je poslan na Vašu adresu e-pošte. Ako poruku niste dobili za 3 minute, provjerite spam folder",
+    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Link za prijavu je poslan na Vašu adresu e-pošte. Ako poruku niste dobili za 3 minute, provjerite spam folder.",
     "Account": "Vaš račun",
     "Account details updated successfully": "Podaci računa su uspješno ažurirani",
     "Account settings": "Podešavanje vašeg računa",
@@ -53,7 +53,7 @@
     "Create a new contact": "Napravite novi kontakt:",
     "Current plan": "Trenutni plan pretplate",
     "Delete account": "Obriši račun",
-    "Didn't mean to do this? Manage your preferences <button>here</button>.": "Niste to namjeravali? Upravljajte vašim računom <button>ovdje</button>",
+    "Didn't mean to do this? Manage your preferences <button>here</button>.": "Niste to namjeravali? Upravljajte vašim računom <button>ovdje</button>.",
     "Don't have an account?": "Nemate račun?",
     "Edit": "Uredi",
     "Email": "E-pošta",
