updated by AI suggestions

--- a/ghost/i18n/locales/hr/ghost.json
+++ b/ghost/i18n/locales/hr/ghost.json
@@ -51,8 +51,8 @@
     "View in browser": "Pogledaj u pretraživaču",
     "Welcome back to {siteTitle}!": "Dobro došli na {siteTitle}!",
     "Welcome back! Use this link to securely sign in to your {siteTitle} account:": "Dobro došli! Prijavite se na {siteTitle} klikom na ovaj link:",
-    "When:": "Kada",
-    "Where:": "Gdje",
+    "When:": "Kada:",
+    "Where:": "Gdje:",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Primili ste ovu poruku jer ste <strong>%%{status}%% pretplatnik</strong> na {site}.",
     "You can also copy & paste this URL into your browser:": "Uvijek možete kopirati ovaj URL i otvoriti ga u vašem pregledniku:",
     "You just tried to access your account from a new device.": "Upravo ste pokušali pristupiti svom računu sa novog uređaja.",
