--- a/ghost/i18n/locales/hr/portal.json
+++ b/ghost/i18n/locales/hr/portal.json
@@ -10,7 +10,7 @@
     "{memberEmail} will no longer receive emails when someone replies to your comments.": "{memberEmail} više neće primati e-poštu kada netko odgovori na vaš komentar.",
     "{memberEmail} will no longer receive this newsletter.": "{memberEmail} više neće primati ovaj newsletter.",
     "{trialDays} days free": "{trialDays} dana besplatno",
-    "+1 (123) 456-7890": " (+385 1) 234-5678",
+    "+1 (123) 456-7890": "(+385 1) 234-5678",
     "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Link za prijavu je poslan na Vašu adresu e-pošte. Ako poruku niste dobili za 3 minute, provjerite spam folder.",
     "Account": "Vaš račun",
     "Account details updated successfully": "Podaci računa su uspješno ažurirani",
@@ -112,7 +112,7 @@
     "Name": "Ime i prezime",
     "Need more help? Contact support": "Kontaktirajte nas ako trebate dodatnu pomoć",
     "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Slanje newsletter-a se može onemogućiti na vašem računu iz dva razloga: prethodna e-pošta je označena kao neželjena pošta (spam) ili je pokušaj slanja e-pošte rezultirao trajnim neuspjehom (odbijanje).",
-    "No member exists with this e-mail address.": "Korisnik s ovom email adresom ne postoji.",
+    "No member exists with this e-mail address.": "Korisnik sa ovom email adresom ne postoji.",
     "No member exists with this e-mail address. Please sign up first.": "Korisnik sa ovom email adresom ne postoji. Prvo se registrirajte.",
     "Not receiving emails?": "Ne dobivate e-poštu?",
     "Now check your email!": "Provjerite vašu e-poštu!",
@@ -140,7 +140,7 @@
     "Sign out": "Odjava",
     "Sign up": "Registracija",
     "Signup error: Invalid link": "Greška prilikom prijave. Neispravan link",
-    "Signups from this email domain are currently restricted.": "Registracija sa ovog domene e-pošte trenutno nije dopuštena.",
+    "Signups from this email domain are currently restricted.": "Registracija sa ovog email domena trenutno nije dopuštena.",
     "Something went wrong, please try again later.": "Nešto je pošlo po zlu, pokušajte ponovno kasnije.",
     "Sorry, no recommendations are available right now.": "Trenutno nema dostupnih preporuka.",
     "Sorry, that didn’t work.": "Žao nam je, to nije uspjelo.",
