[Take two!] Linting-ish for i18n json files.

--- a/ghost/i18n/package.json
+++ b/ghost/i18n/package.json
@@ -10,6 +10,7 @@
     "dev": "echo \"Implement me!\"",
     "test:base": "NODE_ENV=testing c8 --include index.js --include lib --check-coverage --100  --reporter text --reporter cobertura -- mocha --reporter dot './test/**/*.test.js'",
     "test": "yarn test:base && yarn translate",
+    "test:update-todos": "node test/generate-todos.js",
     "lint:code": "eslint *.js lib/ --ext .js --cache",
     "lint": "yarn lint:code && yarn lint:test",
     "lint:test": "eslint -c test/.eslintrc.js test/ --ext .js --cache",
