✅ Tests for valid i18n json files. (#23385)
no issue

Goal: prevent commits of translation strings with added/missing
variables, while allowing flexibility for cases where the
translation really can't use all the available variables.

Many translators are not very code-savvy, and struggle with getting the format of our i18n .json files right. 
This PR adds tests for mal-formed json files, checking for missing or added (or misspelled) variables.

New test/i18n-ignores.json file contains a list of problems to be ignored in testing.
* Currently used to allow tests to pass while we wait for translators to sort out the problems
* Useful for cases where a variable might be missing for good reasons (because we need a
less than exact translation to fit a UI element, for example).

Added a commented-out test for context.json not having blanks, will be revisited in a future PR.

Updated context.json to remove blanks.

--- a/ghost/i18n/package.json
+++ b/ghost/i18n/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "echo \"Implement me!\"",
     "test:base": "NODE_ENV=testing c8 --include index.js --include lib --check-coverage --100  --reporter text --reporter cobertura -- mocha --reporter dot './test/**/*.test.js'",
-    "test": "yarn test:base && yarn translate",
+    "test": "yarn test:update-ignores && yarn test:base && yarn translate",
+    "test:update-ignores": "node test/remove-unneeded-ignores.js",
     "lint:code": "eslint *.js lib/ --ext .js --cache",
     "lint": "yarn lint:code && yarn lint:test",
     "lint:test": "eslint -c test/.eslintrc.js test/ --ext .js --cache",
