Update Bulgarian translation

--- a/ghost/i18n/locales/bg/comments.json
+++ b/ghost/i18n/locales/bg/comments.json
@@ -8,13 +8,13 @@
     "Add comment": "Нов коментар",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Добавете контекст към коментара си, споделете името си и опита си, за да насърчите полезна дискусия.",
     "Add reply": "Отговор",
-    "Add your expertise": "",
+    "Add your expertise": "Добавете компетенции",
     "Already a member?": "Вече сте абонат?",
     "Anonymous": "Анонимен",
     "Are you sure?": "Убедени ли сте?",
     "Become a member of {publication} to start commenting.": "Абонирайте се за {publication}, за да коментирате.",
     "Become a paid member of {publication} to start commenting.": "Станете плащащ абонат на {publication}, за да коментирате.",
-    "Best": "",
+    "Best": "Най-добрите",
     "Cancel": "Отказ",
     "Comment": "Коментар",
     "Complete your profile": "Попълнете профила си",
@@ -27,7 +27,7 @@
     "Edit this comment": "Редактиране на коментара",
     "edited": "редактиран",
     "Enter your name": "Попълнете името си",
-    "Expertise": "Опит",
+    "Expertise": "Компетенции",
     "Founder @ Acme Inc": "Основател на Компания ООД",
     "Full-time parent": "Родител на пълно работно време",
     "Head of Marketing at Acme, Inc": "Директор маркетинг в Компания ООД",
@@ -42,8 +42,8 @@
     "Member discussion": "Дискусия за абонатите",
     "Name": "Име",
     "Neurosurgeon": "Неврохирург",
-    "Newest": "",
-    "Oldest": "",
+    "Newest": "Най-нови",
+    "Oldest": "Най-стари",
     "Once deleted, this comment can’t be recovered.": "Веднъж изтрит, коментарът не може да бъде възстановен.",
     "One hour ago": "Преди час",
     "One min ago": "Преди минута",
