Update Italian localization files with missing translations and corrections

--- a/ghost/i18n/locales/it/comments.json
+++ b/ghost/i18n/locales/it/comments.json
@@ -8,20 +8,20 @@
     "Add comment": "Aggiungi commento",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Aggiungi dettagli al tuo commento, condividi il tuo nome e le tue competenze per incoraggiare una conversazione sana.",
     "Add reply": "Aggiungi risposta",
-    "Add your expertise": "",
+    "Add your expertise": "Aggiungi le tue competenze",
     "Already a member?": "Sei già iscritto?",
     "Anonymous": "Anonimo",
-    "Are you sure?": "",
+    "Are you sure?": "Sei sicuro?",
     "Become a member of {publication} to start commenting.": "Iscriviti a {publication} per poter commentare.",
     "Become a paid member of {publication} to start commenting.": "Abbonati a {publication} per poter commentare.",
-    "Best": "",
+    "Best": "Migliori",
     "Cancel": "Annulla",
     "Comment": "Commenta",
     "Complete your profile": "Completa il tuo profilo",
     "Delete": "Elimina",
-    "Deleted": "",
+    "Deleted": "Eliminato",
     "Deleted member": "Utente eliminato",
-    "Deleting": "",
+    "Deleting": "Eliminazione in corso",
     "Discussion": "Discussione",
     "Edit": "Modifica",
     "Edit this comment": "Modifica questo commento",
@@ -31,7 +31,7 @@
     "Founder @ Acme Inc": "Megadirettore Galattico",
     "Full-time parent": "Genitore a tempo pieno",
     "Head of Marketing at Acme, Inc": "Ragioniere presso Megaditta",
-    "Hidden for members": "",
+    "Hidden for members": "Nascosto per gli abbonati",
     "Hide": "Nascondi",
     "Hide comment": "Nascondi commento",
     "Jamie Larson": "Andrea Rossi",
@@ -42,8 +42,8 @@
     "Member discussion": "Commenti",
     "Name": "Nome",
     "Neurosurgeon": "Neurochirurgo",
-    "Newest": "",
-    "Oldest": "",
+    "Newest": "Più recenti",
+    "Oldest": "Più vecchi",
     "Once deleted, this comment can’t be recovered.": "Una volta cancellato, non potrai più recuperare questo commento",
     "One hour ago": "Un'ora fa",
     "One min ago": "Un minuto fa",
