--- a/ghost/i18n/locales/it/ghost.json
+++ b/ghost/i18n/locales/it/ghost.json
@@ -1,7 +1,7 @@
 {
     "{date}": "{date}",
     "All the best!": "A presto!",
-    "Become a paid member of {site} to get access to all premium content.": "",
+    "Become a paid member of {site} to get access to all premium content.": "Abbonati a {site} per accedere a tutti i contenuti premium.",
     "By {authors}": "Di {authors}",
     "Comment": "Commenta",
     "Complete signup for {siteTitle}!": "Completa l'iscrizione a {siteTitle}!",
@@ -12,17 +12,17 @@
     "Confirm your email address": "Conferma il tuo indirizzo email",
     "Confirm your email update for {siteTitle}!": "Conferma l'aggiornamento della tua email per {siteTitle}!",
     "Confirm your subscription to {siteTitle}": "Conferma il tuo abbonamento a {siteTitle}",
-    "Device:": "",
+    "Device:": "Dispositivo:",
     "Email": "Email",
-    "For security verification, enter the code below to sign in to {siteTitle}:": "",
+    "For security verification, enter the code below to sign in to {siteTitle}:": "Per la verifica di sicurezza, inserisci il codice qui sotto per accedere a {siteTitle}:",
     "For your security, the link will expire in 24 hours time.": "Per la tua sicurezza, il link scadrà tra 24 ore.",
     "free": "gratuito",
-    "Here's your code to login to {siteTitle}": "",
+    "Here's your code to login to {siteTitle}": "Ecco il tuo codice per accedere a {siteTitle}",
     "Hey there,": "Ciao,",
     "Hey there!": "Ciao!",
     "If you did not make this request, you can safely ignore this email.": "Se non hai fatto tu questa richiesta, puoi tranquillamente ignorare questa email.",
     "If you did not make this request, you can simply delete this message.": "Se non hai fatto tu questa richiesta, puoi semplicemente cancellare questo messaggio.",
-    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "",
+    "If you didn't try to sign in recently, you can safely ignore this email to deny access.": "Se non hai tentato di accedere di recente, puoi tranquillamente ignorare questa email per negare l'accesso.",
     "Keep reading": "Continua a leggere",
     "Less like this": "Non mi piace",
     "Manage subscription": "Gestisci l’abbonamento",
@@ -36,7 +36,7 @@
     "Sent to {email}": "Inviata a {email}",
     "Sign in": "Accedi",
     "Sign in to {siteTitle}": "Accedi a {siteTitle}",
-    "Sign in verification": "",
+    "Sign in verification": "Verifica accesso",
     "Subscription details": "Dettagli",
     "Tap the link below to complete the signup process for {siteTitle}, and be automatically signed in:": "Clicca il link qui sotto per confermare l'iscrizione a {siteTitle}, ed effettuare automaticamente l'accesso:",
     "Thank you for signing up to {siteTitle}!": "Grazie per esserti iscritto a {siteTitle}!",
@@ -46,16 +46,16 @@
     "This email address will not be used.": "Questo indirizzo email non verrà utilizzato.",
     "trialing": "di prova",
     "Unsubscribe": "Disiscriviti",
-    "Upgrade": "",
-    "Upgrade to continue reading.": "",
+    "Upgrade": "Abbonati",
+    "Upgrade to continue reading.": "Abbonati per continuare a leggere.",
     "View in browser": "Vedi nel browser",
     "Welcome back to {siteTitle}!": "Bentornato su {siteTitle}!",
     "Welcome back! Use this link to securely sign in to your {siteTitle} account:": "Bentornato! Usa questo link per accedere in sicurezza al tuo account su {siteTitle}:",
-    "When:": "",
-    "Where:": "",
+    "When:": "Quando:",
+    "Where:": "Dove:",
     "You are receiving this because you are a <strong>%%{status}%% subscriber</strong> to {site}.": "Ricevi questa mail perché hai un <strong>abbonamento %%{status}%%</strong> a {site}.",
     "You can also copy & paste this URL into your browser:": "Puoi anche copiare e incollare questo indirizzo direttamente nel tuo browser:",
-    "You just tried to access your account from a new device.": "",
+    "You just tried to access your account from a new device.": "Hai appena tentato di accedere al tuo account da un nuovo dispositivo.",
     "You will not be signed up, and no account will be created for you.": "Non verrai iscritto e non verrà creato alcun account a tuo nome.",
     "You will not be subscribed.": "Non sarai iscritto.",
     "You're one tap away from subscribing to {siteTitle} — please confirm your email address with this link:": "Sei a un passo dall'abbonamento a {siteTitle} — conferma la tua email a questo link:",
@@ -65,5 +65,5 @@
     "Your subscription has expired.": "Il tuo abbonamento è scaduto.",
     "Your subscription will expire on {date}.": "Il tuo abbonamento scadrà il {date}.",
     "Your subscription will renew on {date}.": "Il tuo abbonamento si rinnova il {date}.",
-    "Your verification code for {siteTitle}": ""
+    "Your verification code for {siteTitle}": "Il tuo codice di verifica per {siteTitle}"
 }
