--- a/ghost/i18n/locales/it/portal.json
+++ b/ghost/i18n/locales/it/portal.json
@@ -10,12 +10,12 @@
     "{memberEmail} will no longer receive emails when someone replies to your comments.": "Non riceverà più email a {memberEmail} quando qualcuno risponde ai tuoi commenti.",
     "{memberEmail} will no longer receive this newsletter.": "La newsletter non verrà più inviata a {memberEmail}.",
     "{trialDays} days free": "{trialDays} giorni gratis",
-    "+1 (123) 456-7890": "",
+    "+1 (123) 456-7890": "+1 (123) 456-7890",
     "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Un link di accesso è stato inviato alla tua casella di posta. Se non lo ricevi entro 3 minuti, controlla nello spam.",
     "Account": "Account",
     "Account details updated successfully": "Dettagli dell'account aggiornati con successo",
     "Account settings": "Impostazioni account",
-    "Add a personal note": "",
+    "Add a personal note": "Aggiungi una nota personale",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Al termine della prova gratuita, ti verrà addebitato il prezzo regolare del piano scelto. Puoi annullare in qualsiasi momento prima della scadenza.",
     "Already a member?": "Sei già iscritto?",
     "An error occurred": "Si è verificato un errore",
@@ -38,7 +38,7 @@
     "Choose your newsletters": "Scegli la tua newsletter",
     "Click here to retry": "Clicca qui per riprovare",
     "Close": "Chiudi",
-    "Comment preferences updated.": "",
+    "Comment preferences updated.": "Impostazioni dei commenti aggiornate.",
     "Comments": "Commenti",
     "Complimentary": "Omaggio",
     "Confirm": "Conferma",
@@ -67,7 +67,7 @@
     "Enter your email address": "Insirisci il tuo indirizzo email",
     "Enter your name": "Inserisci il tuo nome",
     "Error": "Errore",
-    "Expires {expiryDate}": "Scade il {offerEndDate}",
+    "Expires {expiryDate}": "Scade il {expiryDate}",
     "Failed to cancel subscription, please try again": "La cancellazione dell’abbonamento non è riuscita, riprova, per favore",
     "Failed to log in, please try again": "Accesso non riuscito, riprova, per favore",
     "Failed to log out, please try again": "La disconnessione non è riuscita, riprova, per favore",
@@ -98,13 +98,13 @@
     "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "Nel caso in cui si verifichi un fallimento permanente durante l'invio di una newsletter, le email saranno disabilitate per quell'account.",
     "In your email client add {senderEmail} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": "Nel tuo client di posta aggiungi {senderEmail} ai tuoi contatti. Così il tuo provider riconoscerà l'indirizzo come attendibile.",
     "Invalid email address": "Indirizzo e-mail non valido",
-    "Jamie Larson": "",
-    "jamie@example.com": "",
+    "Jamie Larson": "Jamie Larson",
+    "jamie@example.com": "jamie@example.com",
     "Less like this": "Meno come questo",
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Assicurati che le email non finiscano per sbaglio nello spam. Se ce ne sono, clicca su \"Segnala come non spam\" e/o \"Sposta nella cartella Posta in arrivo\".",
     "Manage": "Impostazioni",
     "Maybe later": "Magari più tardi",
-    "Memberships from this email domain are currently restricted.": "",
+    "Memberships from this email domain are currently restricted.": "Le iscrizioni con questo dominio email sono attualmente limitate.",
     "Memberships unavailable, contact the owner for access.": "Iscrizione non disponibile, contatta il proprietario per accedere.",
     "month": "mese",
     "Monthly": "Mensile",
@@ -140,7 +140,7 @@
     "Sign out": "Esci",
     "Sign up": "Iscriviti",
     "Signup error: Invalid link": "Errore di accesso: link invalido",
-    "Signups from this email domain are currently restricted.": "",
+    "Signups from this email domain are currently restricted.": "Le iscrizioni con questo dominio email sono attualmente limitate.",
     "Something went wrong, please try again later.": "Qualcosa è andato storto, riprova più tardi.",
     "Sorry, no recommendations are available right now.": "Ci dispiace, al momento non ci sono consigli disponibili.",
     "Sorry, that didn’t work.": "Ci dispiace, non ha funzionato.",
@@ -170,7 +170,7 @@
     "There was an error sending the email, please try again": "C'è stato un errore nell'invio dell'e-mail, per favore riprova",
     "This site is invite-only, contact the owner for access.": "Questo sito è accessibile solo su invito, contatta il proprietario per poter accedere.",
     "This site is not accepting payments at the moment.": "Questo sito non accetta pagamenti al momento.",
-    "This site only accepts paid members.": "",
+    "This site only accepts paid members.": "Questo sito è accessibile solo coden abbonamento.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Per completare l'iscrizione, clicca il link di conferma inviato alla tua email. Se non lo ricevi entro 3 minuti, controlla nello spam!",
     "To continue to stay up to date, subscribe to {publication} below.": "Per continuare a rimanere aggiornato, iscriviti a {publication} qui sotto.",
     "Too many attempts try again in {number} days.": "Troppi tentativi, riprova fra {number} giorni.",
@@ -179,7 +179,7 @@
     "Too many different sign-in attempts, try again in {number} days": "Troppi tentativi di accesso, riprova fra {number} giorni",
     "Too many different sign-in attempts, try again in {number} hours": "Troppi tentativi di accesso, riprova fra {number} ore",
     "Too many different sign-in attempts, try again in {number} minutes": "Troppi tentativi di accesso, riprova fra {number} minuti",
-    "Too many sign-up attempts, try again later": "",
+    "Too many sign-up attempts, try again later": "Troppi tentativi di registrazione, riprova più tardi",
     "Try free for {amount} days, then {originalPrice}.": "Prova gratis per {amount} giorni, poi {originalPrice}.",
     "Unable to initiate checkout session": "Impossibile iniziare il checkout",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Abbonati per sbloccare l'accesso a tutte le newsletter.",
