🌐 Added missing translations and improved clarity in Vietnamese locale
ref #23361

This adds missing Vietnamese translations. Also revised some translations to better match common Vietnamese terminology.

--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -11,7 +11,7 @@
     "{memberEmail} will no longer receive this newsletter.": "{memberEmail} sẽ không còn được nhận bản tin này.",
     "{trialDays} days free": "{trialDays} ngày đọc thử miễn phí",
     "+1 (123) 456-7890": "+84 (987) 654-321",
-    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Liên kết đăng nhập đã được gửi đến email của bạn. Sau 3 phút mà chưa thấy, hãy kiểm tra thư hộp thư spam.",
+    "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Liên kết đăng nhập đã được gửi đến email của bạn. Nếu sau 3 phút vẫn chưa thấy, hãy kiểm tra thư hộp thư spam.",
     "Account": "Tài khoản",
     "Account details updated successfully": "Đã cập nhật chi tiết tài khoản thành công",
     "Account settings": "Cài đặt",
@@ -23,7 +23,7 @@
     "Back": "Quay về",
     "Back to Log in": "Quay về đăng nhập",
     "Billing info": "Thông tin thanh toán",
-    "Black Friday": "Ưu Đãi",
+    "Black Friday": "Black Friday",
     "Cancel anytime.": "Hủy bất cứ lúc nào.",
     "Cancel subscription": "Hủy gói",
     "Cancellation reason": "Lý do hủy gói",
@@ -40,7 +40,7 @@
     "Close": "Đóng",
     "Comment preferences updated.": "Đã cập nhật thiết lập bình luận.",
     "Comments": "Bình luận",
-    "Complimentary": "Trải nghiệm",
+    "Complimentary": "Miễn phí",
     "Confirm": "Xác nhận",
     "Confirm cancellation": "Xác nhận hủy",
     "Confirm subscription": "Xác nhận đăng ký",
@@ -122,7 +122,7 @@
     "Plan": "Gói thành viên",
     "Plan checkout was cancelled.": "Đã hủy thanh toán gói.",
     "Plan upgrade was cancelled.": "Đã hủy nâng cấp gói.",
-    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên.",
+    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên miễn phí của bạn",
     "Please enter {fieldName}": "Hãy nhập {fieldName}",
     "Please fill in required fields": "Vui lòng điền các mục bắt buộc",
     "Price": "Giá gói",
@@ -145,7 +145,7 @@
     "Sorry, no recommendations are available right now.": "Rất tiếc, chưa có đề xuất nào vào lúc này.",
     "Sorry, that didn’t work.": "Rất tiếc, không dùng được.",
     "Spam complaints": "Than phiền",
-    "Start {amount}-day free trial": "Bắt đầu {amount} ngày đọc thử",
+    "Start {amount}-day free trial": "Bắt đầu dùng thử miễn phí trong {amount} ngày",
     "Starting {startDate}": "Bắt đầu {startDate}",
     "Starting today": "Bắt đầu hôm nay",
     "Submit feedback": "Gửi phản hồi",
@@ -169,7 +169,7 @@
     "There was an error processing your payment. Please try again.": "Xảy ra lỗi khi tiến hành thanh toán. Hãy thử lại sau.",
     "There was an error sending the email, please try again": "Xảy ra lỗi khi gửi email, vui lòng thử lại",
     "This site is invite-only, contact the owner for access.": "Trang web này chỉ dành cho những người được mời, hãy liên hệ với chủ sở hữu để cấp quyền truy cập.",
-    "This site is not accepting donations at the moment.": "",
+    "This site is not accepting donations at the moment.": "Trang web này hiện chưa nhận quyên góp.",
     "This site is not accepting payments at the moment.": "Trang web này hiện chưa chấp nhận thanh toán.",
     "This site only accepts paid members.": "Trang web này chỉ dành cho thành viên trả phí.",
     "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "Để hoàn tất đăng ký, nhấn vào liên kết xác nhận được gửi tới email của bạn. Sau 3 phút mà không thấy, hãy kiểm tra hộp thư spam!",
