🌐 Updated Vietnamese translations based on reviewer feedback
ref #23361

Revised translations in comments.json, ghost.json, and portal.json for accuracy, conciseness, and consistency.

--- a/ghost/i18n/locales/vi/comments.json
+++ b/ghost/i18n/locales/vi/comments.json
@@ -7,7 +7,7 @@
     "1 comment": "1 bình luận",
     "Add comment": "Thêm bình luận",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Thêm ngữ cảnh, tên và chuyên môn của bạn để thúc đẩy cuộc thảo luận lành mạnh.",
-    "Add reply": "Thêm trả lời",
+    "Add reply": "Trả lời",
     "Add your expertise": "Thêm chuyên môn của bạn",
     "Already a member?": "Đã là thành viên?",
     "Anonymous": "Ẩn danh",
@@ -64,7 +64,7 @@
     "Show comment": "Xem bình luận",
     "Sign in": "Đăng nhập",
     "Sign up now": "Đăng ký ngay",
-    "Sort by": "Sắp xếp theo",
+    "Sort by": "Xếp theo",
     "Start the conversation": "Bắt đầu cuộc trò chuyện",
     "This comment has been hidden.": "Bình luận này đã bị ẩn.",
     "This comment has been removed.": "Bình luận này đã bị xóa.",
