--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -23,7 +23,7 @@
     "Back": "Quay về",
     "Back to Log in": "Quay về đăng nhập",
     "Billing info": "Thông tin thanh toán",
-    "Black Friday": "Black Friday",
+    "Black Friday": "Ưu Đãi",
     "Cancel anytime.": "Hủy bất cứ lúc nào.",
     "Cancel subscription": "Hủy gói",
     "Cancellation reason": "Lý do hủy gói",
@@ -40,7 +40,7 @@
     "Close": "Đóng",
     "Comment preferences updated.": "Đã cập nhật thiết lập bình luận.",
     "Comments": "Bình luận",
-    "Complimentary": "Miễn phí",
+    "Complimentary": "Trải nghiệm",
     "Confirm": "Xác nhận",
     "Confirm cancellation": "Xác nhận hủy",
     "Confirm subscription": "Xác nhận đăng ký",
@@ -100,7 +100,7 @@
     "Invalid email address": "Địa chỉ email không hợp lệ",
     "Jamie Larson": "Jamie Larson",
     "jamie@example.com": "jamie@example.com",
-    "Less like this": "Không thích lắm",
+    "Less like this": "Gửi ít hơn",
     "Make sure emails aren't accidentally ending up in the Spam or Promotions folders of your inbox. If they are, click on \"Mark as not spam\" and/or \"Move to inbox\".": "Hãy chắc rằng email không đang trong hộp thư Spam hoặc Quảng cáo. Nếu đang vậy, chọn \"Đánh dấu không phải spam\" hoặc \"Chuyển tới Hộp thư đến\".",
     "Manage": "Quản lý",
     "Maybe later": "Để sau",
@@ -108,7 +108,7 @@
     "Memberships unavailable, contact the owner for access.": "Chưa phải là thành viên, liên hệ với chủ sở hữu để truy cập.",
     "month": "tháng",
     "Monthly": "Hàng tháng",
-    "More like this": "Thích bài viết như này",
+    "More like this": "Gửi nhiều hơn",
     "Name": "Tên",
     "Need more help? Contact support": "Cần giúp đỡ? Liên hệ hỗ trợ",
     "Newsletters can be disabled on your account for two reasons: A previous email was marked as spam, or attempting to send an email resulted in a permanent failure (bounce).": "Tài khoản của bạn có thể không nhận được bản tin email bởi hai lý do: Email trước đó đã bị đánh dấu là thư rác hoặc lỗi thất bại vĩnh viễn (thư bị trả lại).",
@@ -122,7 +122,7 @@
     "Plan": "Gói thành viên",
     "Plan checkout was cancelled.": "Đã hủy thanh toán gói.",
     "Plan upgrade was cancelled.": "Đã hủy nâng cấp gói.",
-    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên miễn phí của bạn",
+    "Please contact {supportAddress} to adjust your complimentary subscription.": "Vui lòng liên hệ {supportAddress} để điều chỉnh gói thành viên của bạn.",
     "Please enter {fieldName}": "Hãy nhập {fieldName}",
     "Please fill in required fields": "Vui lòng điền các mục bắt buộc",
     "Price": "Giá gói",
@@ -145,7 +145,7 @@
     "Sorry, no recommendations are available right now.": "Rất tiếc, chưa có đề xuất nào vào lúc này.",
     "Sorry, that didn’t work.": "Rất tiếc, không dùng được.",
     "Spam complaints": "Than phiền",
-    "Start {amount}-day free trial": "Bắt đầu dùng thử miễn phí trong {amount} ngày",
+    "Start {amount}-day free trial": "Bắt đầu {amount} ngày đọc thử",
     "Starting {startDate}": "Bắt đầu {startDate}",
     "Starting today": "Bắt đầu hôm nay",
     "Submit feedback": "Gửi phản hồi",
